--- a/index.html
+++ b/index.html
@@ -24,25 +24,21 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
-    <div class="container-fluid h-100">
+    <main class="container-fluid h-100">
       <div class="row h-100">
-        <!-- Left Column - Login Form -->
         <div class="col-md-6 d-flex flex-column m-0 p-0">
-          <!-- Header -->
-          <div class="swift-header text-white p-4">
+          <header class="swift-header text-white p-4">
             <h1 class="swift-logo mb-1">Swift Pro</h1>
             <p class="swift-subtitle mb-0">
               Faça login e comece a ganhar pontos!
             </p>
-          </div>
+          </header>
 
-          <!-- Login Form -->
-          <div class="flex-grow-1 d-flex align-items-center">
+          <section class="flex-grow-1 d-flex align-items-center">
             <div class="w-100 px-4 px-md-5">
               <h2 class="mb-4 fw-bold">Acesse sua conta</h2>
 
               <form id="loginForm">
-                <!-- Email Field -->
                 <div class="mb-3">
                   <label for="email" class="form-label text-muted"
                     >E-mail Swift</label
@@ -62,7 +58,6 @@
                   <div class="error-message-container" id="email-error"></div>
                 </div>
 
-                <!-- Password Field -->
                 <div class="mb-3">
                   <label for="password" class="form-label text-muted"
                     >Senha</label
@@ -152,9 +147,9 @@
                 </div>
               </form>
             </div>
-          </div>
+          </section>
 
-          <div class="p-4 d-flex flex-column align-items-center text-center">
+          <footer class="p-4 d-flex flex-column align-items-center text-center">
             <div class="d-flex justify-content-center gap-3 mb-3">
               <div class="icon-circle">
                 <i data-lucide="award" class="text-warning"></i>
@@ -176,11 +171,11 @@
                 <a href="#" class="text-warning">Termos de uso</a>
               </small>
             </div>
-          </div>
+          </footer>
         </div>
 
         <!-- Imagem da direita -->
-        <div
+        <aside
           class="col-md-6 d-none d-md-block position-relative overflow-hidden m-0 p-0"
         >
           <div
@@ -193,9 +188,9 @@
               style="object-fit: cover"
             />
           </div>
-        </div>
+        </aside>
       </div>
-    </div>
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
