--- a/index.html
+++ b/index.html
@@ -34,144 +34,164 @@
             </p>
           </header>
 
-          <section class="flex-grow-1 d-flex align-items-center">
-            <div class="w-100 px-4 px-md-5">
-              <h2 class="mb-4 fw-bold">Acesse sua conta</h2>
+          <div
+            class="d-flex flex-column h-100 justify-content-center align-items-center mt-2"
+          >
+            <div class="login-container w-100">
+              <section class="flex-grow-1 d-flex align-items-center">
+                <div class="w-100 px-4 px-md-5">
+                  <h2 class="mb-4 fw-bold">Acesse sua conta</h2>
 
-              <form id="loginForm">
-                <div class="mb-3">
-                  <label for="email" class="form-label text-muted"
-                    >E-mail Swift</label
-                  >
-                  <div class="input-group">
-                    <span class="input-group-text bg-light border-end-0">
-                      <i data-lucide="mail" class="text-muted"></i>
-                    </span>
-                    <input
-                      type="email"
-                      class="form-control border-start-0"
-                      id="email"
-                      placeholder="seu.email@swift.com.br"
-                      required
-                    />
-                  </div>
-                  <div class="error-message-container" id="email-error"></div>
-                </div>
+                  <form id="loginForm">
+                    <div class="mb-3">
+                      <label for="email" class="form-label text-muted"
+                        >E-mail Swift</label
+                      >
+                      <div class="input-group">
+                        <span class="input-group-text bg-light border-end-0">
+                          <i data-lucide="mail" class="text-muted"></i>
+                        </span>
+                        <input
+                          type="email"
+                          class="form-control border-start-0"
+                          id="email"
+                          placeholder="seu.email@swift.com.br"
+                          required
+                        />
+                      </div>
+                      <div
+                        class="error-message-container"
+                        id="email-error"
+                      ></div>
+                    </div>
 
-                <div class="mb-3">
-                  <label for="password" class="form-label text-muted"
-                    >Senha</label
-                  >
-                  <div class="input-group">
-                    <span class="input-group-text bg-light border-end-0">
-                      <i data-lucide="lock" class="text-muted"></i>
-                    </span>
-                    <input
-                      type="password"
-                      class="form-control border-start-0 border-end-0"
-                      id="password"
-                      placeholder="••••••••"
-                      required
-                    />
-                    <span
-                      class="input-group-text bg-light border-start-0 cursor-pointer"
-                      id="togglePassword"
+                    <div class="mb-3">
+                      <label for="password" class="form-label text-muted"
+                        >Senha</label
+                      >
+                      <div class="input-group">
+                        <span class="input-group-text bg-light border-end-0">
+                          <i data-lucide="lock" class="text-muted"></i>
+                        </span>
+                        <input
+                          type="password"
+                          class="form-control border-start-0 border-end-0"
+                          id="password"
+                          placeholder="••••••••"
+                          required
+                        />
+                        <span
+                          class="input-group-text bg-light border-start-0 cursor-pointer"
+                          id="togglePassword"
+                        >
+                          <i data-lucide="eye" class="text-muted"></i>
+                        </span>
+                      </div>
+                      <div
+                        class="error-message-container"
+                        id="password-error"
+                      ></div>
+                    </div>
+
+                    <div
+                      class="d-flex justify-content-between align-items-center mb-4"
                     >
-                      <i data-lucide="eye" class="text-muted"></i>
-                    </span>
-                  </div>
-                  <div
-                    class="error-message-container"
-                    id="password-error"
-                  ></div>
-                </div>
+                      <div class="form-check">
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          id="rememberMe"
+                        />
+                        <label
+                          class="form-check-label text-muted"
+                          for="rememberMe"
+                        >
+                          Lembrar de mim
+                        </label>
+                      </div>
+                      <a href="#" class="text-decoration-none text-danger"
+                        >Esqueceu a senha?</a
+                      >
+                    </div>
 
-                <div
-                  class="d-flex justify-content-between align-items-center mb-4"
-                >
-                  <div class="form-check">
-                    <input
-                      class="form-check-input"
-                      type="checkbox"
-                      id="rememberMe"
-                    />
-                    <label class="form-check-label text-muted" for="rememberMe">
-                      Lembrar de mim
-                    </label>
-                  </div>
-                  <a href="#" class="text-decoration-none text-danger"
-                    >Esqueceu a senha?</a
-                  >
-                </div>
-
-                <button
-                  type="submit"
-                  class="btn btn-warning btn-swift w-100 py-2 mb-4 fw-bold"
-                >
-                  <i data-lucide="shield-check" class="me-2"></i>
-                  Entrar
-                </button>
-
-                <div class="text-center mb-4">
-                  <hr class="d-inline-block" style="width: 100px" />
-                  <span class="text-muted mx-3">Ou continue com</span>
-                  <hr class="d-inline-block" style="width: 100px" />
-                </div>
-
-                <div class="row mb-4">
-                  <div class="col-6">
                     <button
-                      type="button"
-                      class="btn btn-outline-secondary w-100 py-2"
+                      type="submit"
+                      class="btn btn-warning btn-swift w-100 py-2 mb-4 fw-bold"
                     >
-                      <i data-lucide="chrome" class="me-2"></i>
-                      Google
+                      <i data-lucide="shield-check" class="me-2"></i>
+                      Entrar
                     </button>
+
+                    <div class="text-center mb-4">
+                      <div class="social-divider">
+                        <hr class="social-hr" />
+                        <span class="text-muted social-text"
+                          >Ou continue com</span
+                        >
+                        <hr class="social-hr" />
+                      </div>
+                    </div>
+
+                    <div class="row mb-4">
+                      <div class="col-6">
+                        <button
+                          type="button"
+                          class="btn btn-outline-secondary w-100 py-2"
+                        >
+                          <i data-lucide="chrome" class="me-2"></i>
+                          Google
+                        </button>
+                      </div>
+                      <div class="col-6">
+                        <button
+                          type="button"
+                          class="btn btn-outline-secondary w-100 py-2"
+                        >
+                          <i data-lucide="facebook" class="me-2"></i>
+                          Facebook
+                        </button>
+                      </div>
+                    </div>
+
+                    <div class="text-center">
+                      <span class="text-muted">Novo na plataforma? </span>
+                      <a
+                        href="#"
+                        class="text-decoration-none text-danger fw-bold"
+                        >Fale com o RH</a
+                      >
+                    </div>
+                  </form>
+                </div>
+              </section>
+
+              <footer
+                class="p-4 d-flex flex-column align-items-center text-center"
+              >
+                <div class="d-flex justify-content-center gap-3 mb-3">
+                  <div class="icon-circle">
+                    <i data-lucide="award" class="text-warning"></i>
                   </div>
-                  <div class="col-6">
-                    <button
-                      type="button"
-                      class="btn btn-outline-secondary w-100 py-2"
-                    >
-                      <i data-lucide="facebook" class="me-2"></i>
-                      Facebook
-                    </button>
+                  <div class="icon-circle">
+                    <i data-lucide="database" class="text-warning"></i>
+                  </div>
+                  <div class="icon-circle">
+                    <i data-lucide="bar-chart-3" class="text-warning"></i>
                   </div>
                 </div>
-
-                <div class="text-center">
-                  <span class="text-muted">Novo na plataforma? </span>
-                  <a href="#" class="text-decoration-none text-danger fw-bold"
-                    >Fale com o RH</a
-                  >
+                <a href="#" class="text-warning text-decoration-none fw-bold"
+                  >Acessar Site Swift</a
+                >
+                <div class="mt-3">
+                  <small class="text-muted">
+                    Protegido por reCAPTCHA.
+                    <a href="#" class="text-warning">Privacidade</a> e
+                    <a href="#" class="text-warning">Termos de uso</a>
+                  </small>
                 </div>
-              </form>
+              </footer>
             </div>
-          </section>
-
-          <footer class="p-4 d-flex flex-column align-items-center text-center">
-            <div class="d-flex justify-content-center gap-3 mb-3">
-              <div class="icon-circle">
-                <i data-lucide="award" class="text-warning"></i>
-              </div>
-              <div class="icon-circle">
-                <i data-lucide="database" class="text-warning"></i>
-              </div>
-              <div class="icon-circle">
-                <i data-lucide="bar-chart-3" class="text-warning"></i>
-              </div>
-            </div>
-            <a href="#" class="text-warning text-decoration-none fw-bold"
-              >Acessar Site Swift</a
-            >
-            <div class="mt-3">
-              <small class="text-muted">
-                Protegido por reCAPTCHA.
-                <a href="#" class="text-warning">Privacidade</a> e
-                <a href="#" class="text-warning">Termos de uso</a>
-              </small>
-            </div>
-          </footer>
+          </div>
         </div>
 
         <!-- Imagem da direita -->
