--- a/missoes.html
+++ b/missoes.html
@@ -1,188 +1,246 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SwiftPro – Gamificação para Lojas</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <script defer src="https://unpkg.com/lucide@latest"></script>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>SwiftPro – Gamificação para Lojas</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <script defer src="https://unpkg.com/lucide@latest"></script>
+    <link rel="stylesheet" href="assets/css/style.css" />
 
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg sticky-top" aria-label="Navegação principal">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <i class="bi bi-fire text-brand"></i>
-        <strong>SwiftPro</strong>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navOffcanvas" aria-controls="navOffcanvas" aria-label="Abrir menu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <!-- Sistema de Autenticação -->
+    <script src="assets/js/auth.js"></script>
+    <script>
+      // Proteger página - qualquer usuário logado pode acessar
+      window.checkPageAccess();
+    </script>
+  </head>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg sticky-top"
+      aria-label="Navegação principal"
+    >
+      <div class="container">
+        <a
+          class="navbar-brand d-flex align-items-center gap-2"
+          href="index.html"
+        >
+          <i class="bi bi-fire text-brand"></i>
+          <strong>SwiftPro</strong>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#navOffcanvas"
+          aria-controls="navOffcanvas"
+          aria-label="Abrir menu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="navOffcanvas">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title">Menu</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Fechar"></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-            <li class="nav-item"><a class="nav-link" href="ranking.html">Ranking</a></li>
-            <li class="nav-item"><a class="nav-link" href="missoes.html">Missões</a></li>
-            <li class="nav-item"><a class="nav-link" href="plano.html">Plano de Carreira</a></li>
-            <li class="nav-item"><a class="nav-link" href="gerente.html">Área do Gerente</a></li>
-            <li class="nav-item"><a class="nav-link" href="config.html">Configurações</a></li>
-            <li class="nav-item"><a class="nav-link" href="historico.html">Histórico</a></li>
-          </ul>
-          <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
-            <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#loginModal"><i class="bi bi-box-arrow-in-right me-1"></i> Entrar</button>
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signupModal"><i class="bi bi-person-plus me-1"></i> Criar conta</button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="navOffcanvas">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title">Menu</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Fechar"
+            ></button>
           </div>
-        </div>
-      </div>
-    </div>
-  </nav>
-
-<section id="missoes" class="py-5">
-  <div class="container">
-    <div class="d-flex align-items-center justify-content-between mb-3">
-      <h2 class="h4 m-0">Missões</h2>
-      <div class="d-flex gap-2">
-        <select class="form-select form-select-sm" aria-label="Filtrar tipo">
-          <option>Vendas</option>
-          <option>Estoque</option>
-        </select>
-        <select class="form-select form-select-sm" aria-label="Filtrar período">
-          <option>Semana</option>
-          <option>Mês</option>
-        </select>
-      </div>
-    </div>
-    <div class="row g-3">
-      <div class="col-12 col-lg-4">
-        <div class="card h-100">
-          <div class="card-body d-flex flex-column">
-            <div class="d-flex align-items-center gap-2 mb-1"><i class="bi bi-bag-check text-brand"></i><h3 class="h6 m-0">Combo da Semana</h3></div>
-            <p class="text-muted">Venda carne + tempero. Bônus <strong>2×</strong> pontos (cross-sell).</p>
-            <div class="mt-auto d-flex gap-2">
-              <button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#entregarEvidenciaModal">Entregar evidência</button>
-              <button class="btn btn-sm btn-outline-secondary">Detalhes</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="card h-100">
-          <div class="card-body d-flex flex-column">
-            <div class="d-flex align-items-center gap-2 mb-1"><i class="bi bi-emoji-smile text-brand"></i><h3 class="h6 m-0">NPS 9+</h3></div>
-            <p class="text-muted">Garanta avaliação de clientes com nota ≥ 9.</p>
-            <div class="mt-auto d-flex gap-2">
-              <button class="btn btn-sm btn-outline-secondary">Boas práticas</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="card h-100">
-          <div class="card-body d-flex flex-column">
-            <div class="d-flex align-items-center gap-2 mb-1"><i class="bi bi-cash-coin text-brand"></i><h3 class="h6 m-0">Ticket Médio R$80+</h3></div>
-            <p class="text-muted">Ofereça cortes premium e combos de valor.</p>
-            <div class="mt-auto d-flex gap-2">
-              <button class="btn btn-sm btn-outline-secondary">Dicas de venda</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-  <footer class="py-4 mt-4">
-    <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
-      <div class="text-muted small">© 2025 SwiftPro. Todos os direitos reservados.</div>
-      <div class="d-flex align-items-center gap-3">
-        <a class="small text-decoration-none" href="#">Termos</a>
-        <a class="small text-decoration-none" href="#">Privacidade</a>
-        <a class="small text-decoration-none" href="#">Ajuda</a>
-      </div>
-    </div>
-  </footer>
-
-  <!-- Login -->
-  <div class="modal fade" id="loginModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Entrar</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
-        </div>
-        <div class="modal-body">
-          <form class="row g-3" onsubmit="event.preventDefault(); alert('Login simulado.');">
-            <div class="col-12">
-              <label class="form-label">E-mail</label>
-              <input type="email" class="form-control" required>
-            </div>
-            <div class="col-12">
-              <label class="form-label">Senha</label>
-              <input type="password" class="form-control" required>
-            </div>
-            <div class="col-12 d-flex justify-content-between align-items-center">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="lembrar">
-                <label class="form-check-label" for="lembrar">Lembrar</label>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
+              <li class="nav-item">
+                <a class="nav-link" href="ranking.html">Ranking</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="missoes.html">Missões</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="plano.html">Plano de Carreira</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="gerente.html">Área do Gerente</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="config.html">Configurações</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="historico.html">Histórico</a>
+              </li>
+            </ul>
+            <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
+              <!-- Menu dropdown do usuário -->
+              <div class="dropdown text-end">
+                <a
+                  href="#"
+                  class="d-flex align-items-center text-decoration-none dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <img
+                    src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=32&h=32&fit=crop&crop=face&auto=format"
+                    alt="Avatar do usuário"
+                    width="32"
+                    height="32"
+                    class="rounded-circle me-2"
+                    data-user-avatar
+                  />
+                  <span class="d-none d-lg-inline-block" data-user-name
+                    >Usuário</span
+                  >
+                </a>
+                <ul class="dropdown-menu text-small">
+                  <li class="dropdown-header">
+                    <div class="fw-semibold" data-user-name>Usuário</div>
+                    <small class="text-muted" data-user-email
+                      >usuario@swift.com</small
+                    >
+                    <small class="text-muted d-block" data-user-role
+                      >Carregando...</small
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="config.html"
+                      ><i class="bi bi-gear me-2"></i>Configurações</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="historico.html"
+                      ><i class="bi bi-clock-history me-2"></i>Histórico</a
+                    >
+                  </li>
+                  <li data-manager-only>
+                    <a class="dropdown-item" href="gerente.html"
+                      ><i class="bi bi-person-gear me-2"></i>Área do Gerente</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="#" data-logout
+                      ><i class="bi bi-box-arrow-right me-2"></i>Sair</a
+                    >
+                  </li>
+                </ul>
               </div>
-              <a href="#" class="small">Esqueci minha senha</a>
             </div>
-            <div class="col-12"><button class="btn btn-primary w-100">Entrar</button></div>
-          </form>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
+    </nav>
 
-  <!-- Cadastro -->
-  <div class="modal fade" id="signupModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Criar conta</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+    <section id="missoes" class="py-5">
+      <div class="container">
+        <div class="d-flex align-items-center justify-content-between mb-3">
+          <h2 class="h4 m-0">Missões</h2>
+          <div class="d-flex gap-2">
+            <select
+              class="form-select form-select-sm"
+              aria-label="Filtrar tipo"
+            >
+              <option>Vendas</option>
+              <option>Estoque</option>
+            </select>
+            <select
+              class="form-select form-select-sm"
+              aria-label="Filtrar período"
+            >
+              <option>Semana</option>
+              <option>Mês</option>
+            </select>
+          </div>
         </div>
-        <div class="modal-body">
-          <form class="row g-3" onsubmit="event.preventDefault(); alert('Cadastro simulado.');">
-            <div class="col-12">
-              <label class="form-label">Nome</label>
-              <input class="form-control" required>
+        <div class="row g-3">
+          <div class="col-12 col-lg-4">
+            <div class="card h-100">
+              <div class="card-body d-flex flex-column">
+                <div class="d-flex align-items-center gap-2 mb-1">
+                  <i class="bi bi-bag-check text-brand"></i>
+                  <h3 class="h6 m-0">Combo da Semana</h3>
+                </div>
+                <p class="text-muted">
+                  Venda carne + tempero. Bônus <strong>2×</strong> pontos
+                  (cross-sell).
+                </p>
+                <div class="mt-auto d-flex gap-2">
+                  <button
+                    class="btn btn-sm btn-primary"
+                    data-bs-toggle="modal"
+                    data-bs-target="#entregarEvidenciaModal"
+                  >
+                    Entregar evidência
+                  </button>
+                  <button class="btn btn-sm btn-outline-secondary">
+                    Detalhes
+                  </button>
+                </div>
+              </div>
             </div>
-            <div class="col-12 col-md-6">
-              <label class="form-label">Papel</label>
-              <select class="form-select" required>
-                <option value="colab">Colaborador</option>
-                <option value="estoq">Estoquista</option>
-                <option value="gerente">Gerente</option>
-              </select>
+          </div>
+          <div class="col-12 col-lg-4">
+            <div class="card h-100">
+              <div class="card-body d-flex flex-column">
+                <div class="d-flex align-items-center gap-2 mb-1">
+                  <i class="bi bi-emoji-smile text-brand"></i>
+                  <h3 class="h6 m-0">NPS 9+</h3>
+                </div>
+                <p class="text-muted">
+                  Garanta avaliação de clientes com nota ≥ 9.
+                </p>
+                <div class="mt-auto d-flex gap-2">
+                  <button class="btn btn-sm btn-outline-secondary">
+                    Boas práticas
+                  </button>
+                </div>
+              </div>
             </div>
-            <div class="col-12 col-md-6">
-              <label class="form-label">Loja</label>
-              <input class="form-control" placeholder="Ex.: Vila Mariana" required>
+          </div>
+          <div class="col-12 col-lg-4">
+            <div class="card h-100">
+              <div class="card-body d-flex flex-column">
+                <div class="d-flex align-items-center gap-2 mb-1">
+                  <i class="bi bi-cash-coin text-brand"></i>
+                  <h3 class="h6 m-0">Ticket Médio R$80+</h3>
+                </div>
+                <p class="text-muted">
+                  Ofereça cortes premium e combos de valor.
+                </p>
+                <div class="mt-auto d-flex gap-2">
+                  <button class="btn btn-sm btn-outline-secondary">
+                    Dicas de venda
+                  </button>
+                </div>
+              </div>
             </div>
-            <div class="col-12">
-              <label class="form-label">E-mail</label>
-              <input type="email" class="form-control" required>
-            </div>
-            <div class="col-12">
-              <label class="form-label">Senha</label>
-              <input type="password" class="form-control" minlength="6" required>
-            </div>
-            <div class="col-12"><button class="btn btn-primary w-100">Cadastrar</button></div>
-          </form>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
+    </section>
+    <footer class="py-4 mt-4">
+      <div
+        class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
+      >
+        <div class="text-muted small">
+          © 2025 SwiftPro. Todos os direitos reservados.
+        </div>
+        <div class="d-flex align-items-center gap-3">
+          <a class="small text-decoration-none" href="#">Termos</a>
+          <a class="small text-decoration-none" href="#">Privacidade</a>
+          <a class="small text-decoration-none" href="#">Ajuda</a>
+        </div>
+      </div>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/main.js"></script>
-
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
